# Island-Simulation

./: CMakeLists.txt
docs/: 00_Vision.txt  01_Architecture.txt  02_World.txt  03_Agent.txt  04_Memory.txt  05_Mind_Simulation.txt  06_Dungeon_Master.txt  07_Replay.txt  08_Roadmap.txt  08_Roadmap.txt.autosave  09_Personalities.txt  11_Relationship.txt  12_Planner.txt  13_Mind_Visualizer.txt  14_Communication.txt  15_Actions.txt  16_Project_Structue.txt.autosave
docs/12-7/: 01_Research_Question.txt.autosave  02_Vision.txt.autosave
include/: Agent.h  AgentComponent.h  ComponentStorage.h  Entity.h  EntityManager.h  Health.h  HealthComponent.h  HealthSystem.h  MovementSystem.h  Observation.h  ObservationComponent.h  ObservationSystem.h  Position.h  PositionComponent.h  Resource.h  ResourceComponent.h  Simulation.h  Velocity.h  VelocityComponent.h  VisibleEntity.h  World.h
src/: AgentComponent.cpp  EntityManager.cpp  HealthComponent.cpp  HealthSystem.cpp  MovementSystem.cpp  Observation.cpp  ObservationComponent.cpp  ObservationSystem.cpp  PositionComponent.cpp  ResourceComponent.cpp  Simulation.cpp  VelocityComponent.cpp  World.cpp  main.cpp
src/.cph/: .World.cpp_fdbd54a12d38a41913b19e11538ed648.prob  .main.cpp_66daae71d061b16afb7efc2088447c00.prob
